--- a/Index.html
+++ b/Index.html
@@ -51,7 +51,7 @@
     </style>
 </head>
 <body>
-    <h1>Happy Birthday!</h1>
+    <h1>Happy Birthday Manali!</h1>
 
     <div class="balloons">
         🎈🎉🎂🎁🎉🎈
