--- a/Index.html
+++ b/Index.html
@@ -3,70 +3,150 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday Manali!</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>🎉 Happy Birthday! 🎉</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #fce4ec;
+            background: #f8d7e1;
+            color: #5a2a77;
+            margin: 0;
+            padding: 0;
             text-align: center;
-            padding: 50px;
         }
 
-        h1 {
+        header {
+            background-color: #ffb6c1;
+            color: #ffffff;
+            padding: 20px;
             font-size: 3em;
-            color: #d81b60;
+            text-align: center;
         }
 
-        .message {
-            font-size: 1.5em;
-            color: #4a148c;
-            margin: 20px 0;
+        .birthday-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            height: 100vh;
+            background: #ffe0b3;
+            padding: 20px;
+            position: relative;
         }
 
-        .button {
-            background-color: #f06292;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            font-size: 1.2em;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
+        .wish-text {
+            font-size: 2.5em;
+            font-weight: bold;
+            color: #ff69b4;
+            margin: 30px 0;
+            text-shadow: 2px 2px 8px rgba(255, 105, 180, 0.5);
         }
 
-        .button:hover {
-            background-color: #d81b60;
+        .emoji {
+            font-size: 3em;
+        }
+
+        .decorative {
+            font-size: 1.8em;
+            color: #e63946;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            margin: 10px 0;
+            font-weight: bold;
         }
 
         .balloons {
-            font-size: 3em;
-            margin: 30px 0;
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            justify-content: space-between;
+            width: 220px;
         }
 
-        footer {
-            font-size: 0.9em;
-            color: #9e9e9e;
-            margin-top: 50px;
+        .balloon {
+            width: 50px;
+            height: 80px;
+            background-color: #ff6347;
+            border-radius: 50%;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            animation: float 3s ease-in-out infinite;
         }
+
+        .balloon:nth-child(2) {
+            background-color: #ffd700;
+            animation-delay: 1s;
+        }
+
+        .balloon:nth-child(3) {
+            background-color: #90ee90;
+            animation-delay: 2s;
+        }
+
+        @keyframes float {
+            0% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-30px);
+            }
+            100% {
+                transform: translateY(0);
+            }
+        }
+
+        .sparkles {
+            position: absolute;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            animation: sparkle 1.5s infinite alternate;
+        }
+
+        @keyframes sparkle {
+            0% {
+                opacity: 0.7;
+                transform: scale(1) rotate(0deg);
+            }
+            100% {
+                opacity: 1;
+                transform: scale(1.2) rotate(360deg);
+            }
+        }
+
     </style>
 </head>
 <body>
-    <h1>Happy Birthday Manali!</h1>
 
-    <div class="balloons">
-        🎈🎉🎂🎁🎉🎈
+    <header>
+        🎉🎂 **Happy Birthday Manali !** 🎂🎉
+    </header>
+
+    <div class="birthday-container">
+        <div class="emoji">
+            🎈🎁🎉🎂🥳
+        </div>
+        <div class="wish-text">
+            Wishing you a fantastic day filled with joy, laughter, and endless cake! 🎉🎂
+        </div>
+
+        <div class="decorative">
+            May all your dreams come true! 🌟
+        </div>
+
+        <!-- Floating Balloons -->
+        <div class="balloons">
+            <div class="balloon"></div>
+            <div class="balloon"></div>
+            <div class="balloon"></div>
+        </div>
+
+        <!-- Sparkles Effect -->
+        <div class="sparkles">
+            ✨ ✨ ✨
+        </div>
     </div>
 
-    <div class="message">
-        Wishing you a day filled with love, joy, and laughter. Enjoy every moment of your special day!
-    </div>
-
-    <button class="button" onclick="window.location.href='mailto:someone@example.com'">
-        Send Your Wishes!
-    </button>
-
-    <footer>
-        <p>Created with ❤️ for the birthday person</p>
-    </footer>
 </body>
 </html>
