--- a/Index.html
+++ b/Index.html
@@ -3,121 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Happy Birthday!</title>
+    <title>Happy Birthday Manali!</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background: #f8d7e1;
-            color: #5a2a77;
-            margin: 0;
-            padding: 0;
+            background-color: #fce4ec;
             text-align: center;
+            padding: 50px;
         }
 
-        header {
-            background-color: #5a2a77;
-            color: white;
-            padding: 20px;
-            font-size: 2.5em;
+        h1 {
+            font-size: 3em;
+            color: #d81b60;
         }
 
-        .birthday-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 100vh;
-            background: #ffe0b3;
-            padding: 20px;
-        }
-
-        .wish-text {
-            font-size: 2em;
-            font-weight: bold;
-            color: #ff69b4;
-            margin: 20px 0;
-            text-shadow: 2px 2px 8px rgba(255, 105, 180, 0.5);
-        }
-
-        .cake-img {
-            width: 300px;
-            height: auto;
-            border-radius: 15px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-            margin: 20px 0;
-        }
-
-        .decorative {
+        .message {
             font-size: 1.5em;
-            color: #e63946;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            margin: 10px 0;
+            color: #4a148c;
+            margin: 20px 0;
+        }
+
+        .button {
+            background-color: #f06292;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 1.2em;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .button:hover {
+            background-color: #d81b60;
         }
 
         .balloons {
-            position: absolute;
-            bottom: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            display: flex;
-            justify-content: space-between;
-            width: 200px;
+            font-size: 3em;
+            margin: 30px 0;
         }
 
-        .balloon {
-            width: 50px;
-            height: 80px;
-            background-color: #ff6347;
-            border-radius: 50%;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-            animation: float 3s ease-in-out infinite;
-        }
-
-        .balloon:nth-child(2) {
-            background-color: #ffd700;
-            animation-delay: 1s;
-        }
-
-        .balloon:nth-child(3) {
-            background-color: #90ee90;
-            animation-delay: 2s;
-        }
-
-        @keyframes float {
-            0% {
-                transform: translateY(0);
-            }
-            50% {
-                transform: translateY(-30px);
-            }
-            100% {
-                transform: translateY(0);
-            }
+        footer {
+            font-size: 0.9em;
+            color: #9e9e9e;
+            margin-top: 50px;
         }
     </style>
 </head>
 <body>
-    <header>
-        🎉 🎂 Happy Birthday Manali (Rupali) 🙂 🎂 🎉
-    </header>
+    <h1>Happy Birthday Manali (Rupali) 😀!</h1>
 
-    <div class="birthday-container">
-        <img src="https://via.placeholder.com/300x300.png?text=Happy+Birthday+Cake" alt="Birthday Cake" class="cake-img">
-        <div class="wish-text">
-            Wishing you a day filled with love, laughter, and cake!
-        </div>
-
-        <div class="decorative">
-            May your year be as sweet as your smile!
-        </div>
-
-        <div class="balloons">
-            <div class="balloon"></div>
-            <div class="balloon"></div>
-            <div class="balloon"></div>
-        </div>
+    <div class="balloons">
+        🎈🎉🎂🎁🎉🎈
     </div>
+
+    <div class="message">
+        Wishing you a day filled with love, joy, and laughter. Enjoy every moment of your special day!
+    </div>
+
+    <button class="button" onclick="window.location.href='mailto:someone@example.com'">
+        Send Your Wishes!
+    </button>
+
+    <footer>
+        <p>Created with ❤️ for the birthday person</p>
+    </footer>
 </body>
 </html>
